# keepassxc-proxy-cli

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
keepassxc-proxy-cli/: __main__.py
keepassxc-proxy-cli/lib/: __init__.py
keepassxc_proxy_cli/: __init__.py  __main__.py
keepassxc_proxy_cli/lib/: __init__.py
keepassxc_proxy_cli/tests/: .keepassxc_associations  test_connection.py  test_database.kdbx
