[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "keepassxc_proxy_cli"
authors = [{ name = "Horst Schneider", email = "horst.schneider@urz.uni-heidelberg.de" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: BSD License"]
dynamic = ["version", "description"]
dependencies = [
  'keepassxc-proxy-client >= 0.1.6',
  'tabulate >= 0.9.0',
]

[project.urls]
Home = "https://github.com/suspectpart/keepassxc-proxy-cli"

[project.scripts]
keepass-proxy-cli = "keepassxc_proxy_cli:__main__.main"
